Dependency injection elkezdése